ajout une paragraphe dans index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 	<h1>Git & Github</h1>
+	<p>Activite 2 de <strong><a href="https://openclassrooms.com/fr/courses/2342361-gerez-votre-code-avec-git-et-github">gerez-votre-code-avec-git-et-github</a></strong></p>
 </body>
 </html>
